@@ -36,27 +36,14 @@ signed_file = Tempfile.new("signed")
 signed_file.write(signed_text)
 signed_file.close
 
-# Create status file
-status_file = Tempfile.new("status")
-
 # Check sig
 
 puts "NORMAL GPG OUTPUT"
 puts "================="
 puts
-puts `gpg --status-file #{status_file.path} --verify #{signed_file.path}`
+puts `gpg --verify #{signed_file.path}`
 
-# Parse
-status_messages = GPGStatusParser.parse(status_file)
-
-# Print out msgs
-puts
-puts "PARSED STATUS MESSAGES"
-puts "======================"
-puts
-status_messages.each { |msg| puts "#{msg.status} #{msg.args.inspect}" }
-
-# Get sig status and trust
+# Lets save the validity and trust messages
 sig_status = nil
 sig_trust = nil
 
@@ -65,7 +52,9 @@ validity_messages = [:GOODSIG, :EXPSIG, :BADSIG, :ERRSIG, :VALIDSIG]
 trust_messages = [:TRUST_UNDEFINED, :TRUST_NEVER, :TRUST_MARGINAL,
                   :TRUST_FULLY, :TRUST_ULTIMATE]
 
-status_messages.each do |msg|
+GPGStatusParser.run_gpg("--verify #{signed_file.path}") do |msg|
+  puts "RECEIVED: #{msg.status} #{msg.args.inspect}"
+
   sig_status = msg.status if validity_messages.include? msg.status
   sig_trust = msg.status if trust_messages.include? msg.status
 end
@@ -76,11 +65,6 @@ puts "============================"
 puts
 puts "Signature validity was #{sig_status}"
 puts "Signature trust level was #{sig_trust}"
-# Clean up
-signed_file.unlink
-
-status_file.close
-status_file.unlink
 ```
 
 Example Output
@@ -93,20 +77,14 @@ NORMAL GPG OUTPUT
 gpg: Signature made Sun 10 Feb 2013 07:23:24 AM EST using RSA key ID 25D38721
 gpg: Good signature from "Test User <test@example.org>"
 
-
-PARSED STATUS MESSAGES
-======================
-
-SIG_ID {:radix64_string=>"jRWzDyjdbbGjvn9nNJJxF7HA7MA", :sig_creation_date=>"2013-02-10", :sig_timestamp=>"1360499004"}
-GOODSIG {:long_keyid_or_fpr=>"703B0C0E25D38721", :username=>" Test User <test@example.org>"}
-VALIDSIG {:fingerprint_in_hex=>"B2AE14D84135BA08C0FC27C7703B0C0E25D38721", :sig_creation_date=>"2013-02-10", :sig_timestamp=>"1360499004", :expire_timestamp=>"0", :sig_version=>"4", :reserved=>"0", :pubkey_algo=>"1", :hash_algo=>"2", :sig_class=>"01", :primary_key_fpr=>"B2AE14D84135BA08C0FC27C7703B0C0E25D38721"}
-TRUST_ULTIMATE {}
+RECEIVED: SIG_ID {:radix64_string=>"jRWzDyjdbbGjvn9nNJJxF7HA7MA", :sig_creation_date=>"2013-02-10", :sig_timestamp=>"1360499004"}
+RECEIVED: GOODSIG {:long_keyid_or_fpr=>"703B0C0E25D38721", :username=>" Test User <test@example.org>"}
+RECEIVED: VALIDSIG {:fingerprint_in_hex=>"B2AE14D84135BA08C0FC27C7703B0C0E25D38721", :sig_creation_date=>"2013-02-10", :sig_timestamp=>"1360499004", :expire_timestamp=>"0", :sig_version=>"4", :reserved=>"0", :pubkey_algo=>"1", :hash_algo=>"2", :sig_class=>"01", :primary_key_fpr=>"B2AE14D84135BA08C0FC27C7703B0C0E25D38721"}
+RECEIVED: TRUST_ULTIMATE {}
 
 EXTRACTED VALIDITY AND TRUST
 ============================
 
 Signature validity was VALIDSIG
 Signature trust level was TRUST_ULTIMATE
-
-
 ```
